--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Indira Marriage Hall Expenses</title>
+    <title>Indiraa & Nisshanth Marriage Hall Expenses</title>
     <style>
         table {
             width: 100%;
