--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <h1>Indira Marriage Hall Expenses</h1>
+    <h1>Indiraa & Nisshanth Marriage Hall Expenses</h1>
 
     {{if .Error}}
         <p class="error">{{.Error}}</p>
